--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -137,10 +137,96 @@
     }
 
 }
-@media (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1200px) {
     .ek-wrapper-featuresCourses {
         justify-content: space-between;
         align-items: center;
-        gap: 0;
     }
 }
+
+
+.ek-getMore {
+    width: 100%;
+    height: 314px;
+    background-image: url('./../../../public/imges/vector3.png');
+    background-position: center;
+    background-size: cover;
+    border-radius: 20px;
+    margin-block: 80px;
+}
+.ek-getMore h5 {
+    font-family: Exo;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19.2px;
+    color: #555555;
+}
+.ek-getMore h2 {
+    font-family: Exo;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 38.4px;
+}
+.ek-getMore p {
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #555555;
+}
+
+.ek-getMore .ek-btn-getmore {
+    width: 177px;
+    height: 48px;
+    padding: 10px 24px 10px 24px;
+    gap: 10px;
+    border-radius: 24px;
+    background-color: #FF782D;
+    color: #fff;
+    border: 0;
+}
+.ek-getMore .ek-btn-getmore:hover {
+    background-color: #e05000
+}
+.ek-getMore-content {
+    width: 491px;
+    display: flex;
+    flex-direction: column;
+    padding: 54px 0px 45px 43px;
+    gap: 24px;
+}
+
+
+@media (min-width: 300px) and  (max-width: 400px) {
+    .ek-getMore {
+        background-position: left;
+    }
+    .ek-getMore-content {
+        max-width: 300px;
+        padding-block: 10px;
+        padding-inline: 50px;
+        gap: 0px;
+    }
+}
+
+@media (min-width: 400px) and (max-width: 767px) {
+    .ek-getMore {
+        background-position: left;
+    }
+    .ek-getMore-content {
+        max-width: 450px;
+        padding: 50px;
+        gap: 20px;
+    }
+}
+@media (min-width: 768px) and (max-width: 1200px) {
+    .ek-getMore {
+        background-position: left;
+    }
+    .ek-getMore-content {
+        max-width: 450px;
+        padding: 50px;
+        gap: 20px;
+    }
+}
+
