--- a/src/components/BasicBreadcrumbs/BasicBreadcrumbs.css
+++ b/src/components/BasicBreadcrumbs/BasicBreadcrumbs.css
@@ -11,7 +11,7 @@
     
     align-items: center;
     background-color:#F5F5F5;
-    margin-bottom: 60px;
+    /* margin-bottom: 60px; */
   
   
    
