--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -11,10 +11,13 @@
   background-color: aqua;
   display: flex;
   flex-direction: column;
+  margin-top: 60px;
+  position: relative;
 }
 .MA-Cousres .MA-top-courses {
   width: 704px;
   height: 43px;
+
   display: flex;
   background-color: azure;
   justify-content: space-between;
@@ -28,103 +31,109 @@
 
   width: 190px;
   height: 43px;
-  gap: 0px;
+
   opacity: 0px;
 }
 
-.MA-Cousres .MA-courses-cards{
-    width: 704px;
-    height: 1728px;
-    gap: 40px;
-    background-color: blue;
-    position: relative;
+.MA-Cousres .MA-courses-cards {
+  width: 704px;
+  height: 1728px;
+  gap: 40px;
+  /* background-color: blue; */
+  position: relative;
 }
-.MA-Cousres .MA-courses-cards .MA-card{
-  
-    height: 250px;
-    border-radius: 20px;
-    border: 1px solid black;
-    /* gap: 30px; */
-
+.MA-Cousres .MA-courses-cards .MA-card {
+  height: 250px;
+  border-radius: 20px;
+  border: 1px solid black;
+  /* gap: 30px; */
+  cursor: pointer;
 }
-.MA-pagination-courses{
-    width: 204px;
-    height: 48px;
-    gap: 12px;
-    margin: 0 auto;
-    position: absolute;
-    bottom: 0;
-    left: 245px;
-
+.MA-pagination-courses {
+  width: 204px;
+  height: 48px;
+  gap: 12px;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 0;
+  left: 245px;
 }
 /* cards design */
 /* ExampleCard.css */
 .MA-img-card img {
-    width: 291px;
-    height: auto;
-  }
-  
-  .MA-card-left {
-    padding: 20px;
-  }
-  
-  .MA-card-title {
-    color: #6c757d;
-  }
-  
-  .MA-card-body-h4 {
-    font-size: 1.25rem;
-    font-weight: 500;
-  }
-  
-  .MA-card-icons {
-    display: flex;
-    gap: 20px; /* Adjust the gap as needed */
-    margin-top: 10px; /* Optional: Add margin to separate from the title */
-  }
-  
-  .MA-card-icons div {
-    display: flex;
-    align-items: center;
-  }
-  
-  .MA-card-icons img {
-    margin-right: 5px;
-    width: 13.33px;
-    height: 13.33px;
-    top: 1.33px;
-    left: 1.33px;
-    gap: 0px;
-    opacity: 0px;
-  }
-  
-  .MA-footer-card {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 15px; /* Optional: Add margin to separate from the icons */
-  }
-  
-  .MA-footer-card span:first-child {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .MA-footer-card span.MA-card-footer-view {
-    margin-left: auto;
-  }
-  
-  .MA-card-footer-view a {
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  .MA-card-footer-view a:hover {
-    text-decoration: underline;
-  }
-  
-  .x{
-    background-color: black;
+  width: 291px;
+  height: auto;
+}
 
-  }
+.MA-card-left {
+  padding: 20px;
+}
+
+.MA-card-title {
+  color: #6c757d;
+}
+
+.MA-card-body-h4 {
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.MA-card-icons {
+  display: flex;
+  gap: 20px; /* Adjust the gap as needed */
+  margin-top: 10px; /* Optional: Add margin to separate from the title */
+}
+
+.MA-card-icons div {
+  display: flex;
+  align-items: center;
+}
+
+.MA-card-icons img {
+  margin-right: 5px;
+  width: 13.33px;
+  height: 13.33px;
+  top: 1.33px;
+  left: 1.33px;
+  gap: 0px;
+  opacity: 0px;
+}
+
+.MA-footer-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px; /* Optional: Add margin to separate from the icons */
+}
+
+.MA-footer-card span:first-child {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.MA-footer-card span.MA-card-footer-view {
+  margin-left: auto;
+}
+
+.MA-card-footer-view a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.MA-card-footer-view a:hover {
+  text-decoration: underline;
+}
+
+.x {
+  background-color: black;
+}
+
+.MA-courses-sidebar {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #007bff;
+  width: 212px;
+  height: 1104px;
+}
