--- a/src/components/CardsCourses/CardsCourses.css
+++ b/src/components/CardsCourses/CardsCourses.css
@@ -1,5 +1,5 @@
 .ek-cards-c {
-    width: 350px;
+    width: 410px;
     border-radius: 20px;
     border: 1px solid #eaeaea;
     transition: .5s;
@@ -30,6 +30,7 @@ hr {
 }
 
 .ek-lms {
+    width: 100%;
     font-family: Exo;
     font-size: 20px;
     font-weight: 600;
@@ -93,3 +94,4 @@ hr {
     padding-bottom: 20px;
 }
 
+  
