--- a/src/components/TabCourseSingle/TabCourseSingle.css
+++ b/src/components/TabCourseSingle/TabCourseSingle.css
@@ -4,30 +4,69 @@
   box-sizing: border-box;
 }
 .MA-Tabs-Coures-single {
-  /* background-color: rgb(0, 255, 34); */
-  width: 890px;
-  height: 448px;
+  background-color: #F5F5F5;
+  width: 690px;
+  /* height: 448px; */
   justify-content: space-between;
+  border-radius: 20px;
+  padding: 30px;
 }
 
-.MA-Tabs-Coures-single Tab{
-  width: 100px;
-}
+
 
 .MA-TabCourseSingle-part2 {
   width: 604px;
   height: 336px;
-  background-color: black;
+  
+  
 }
 
 .MA-Tabs-Coures-single .MA-TAB-overview-content{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    max-width: 604px;
-    padding: 30px;
+    max-width: 654px;
+    /* padding: 30px; */
 }
 .MA-Tabs-Coures-single .MA-TAB-overview-content .MA-TAB-overview-content1{
    margin: 14px 0;
    
+}
+.MA-tab-Curriculum{
+  width: 650px;
+}
+
+.MA-tab-Curriculum .MA-tab-Curriculum-content{
+  width: 630px;
+  /* padding: 30px; */
+  /* background-color: black; */
+  
+}
+.MA-tab-Curriculum-content-Accordion1{
+
+  
+  border-radius: 8px;
+ 
+ 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.MA-Accordion1{
+  width: 650px;
+  /* margin-right: 5px; */
+  
+  
+  
+}
+.MA-Accordion1 span{
+  width: 400px;
+}
+.MA-Accordion1-part2 {
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 200px;
+  /* margin-left: 5px; */
 }
