--- a/src/pages/CourseSingle/CourseSingle.css
+++ b/src/pages/CourseSingle/CourseSingle.css
@@ -79,7 +79,7 @@
   height: 258px;
   /* background-color: aqua; */
   top: 123px;
-  right: 216px;
+  right: 170px;
   border: 1px solid #EAEAEA ;
   border-radius: 20px;
   
@@ -149,5 +149,13 @@
 .MA-course-single-form-comments {
   min-width: 604px;
   min-height: 110px;
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
+  border: 1px solid #d3d0d0;
+  border-radius: 8px;
+  gap:10px;
+  padding:10px 16px 10px 16px;
+
+}
+.MA-CourseSingle-hero-icons div p{
+  color: #9D9D9D;
 }
