--- a/src/components/SidebarBlog/SidebarBlog.css
+++ b/src/components/SidebarBlog/SidebarBlog.css
@@ -39,45 +39,57 @@
     flex-direction: column;
     gap: 20px;
 }
+
 .ek-side-category-Two {
     display: flex;
     align-items: center;
     gap: 16px;
 }
+
 .ek-side-category-Two img {
     width: 90px;
 }
+
 .ek-side-category-Two a {
     font-family: Jost;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
 }
+
 .ek-side-category-Two a:hover {
     color: #ff782d;
 }
+
 .side {
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
+
 .side-3 {
     display: flex;
     flex-direction: column;
     gap: 8px;
 }
+
 .side-3 p {
     margin: 0;
 }
+
 .ek-side-3-category {
     display: flex;
     flex-direction: column;
     gap: 30px;
 }
-.free-c, .lms, .learn-press {
+
+.free-c,
+.lms,
+.learn-press {
     display: flex;
     gap: 8px;
 }
+
 .free-c p {
     height: 43px;
     padding: 8px 20px 8px 20px;
@@ -85,6 +97,7 @@
     border-radius: 8px;
     border: 1px solid #EAEAEA;
 }
+
 .lms p {
     width: 73px;
     height: 43px;
@@ -101,4 +114,15 @@
     border-radius: 8px;
     border: 1px solid #EAEAEA;
     opacity: 0px;
+}
+
+@media (max-width: 720px) {
+    .ek-sidebar {
+        display: none;
+    }
+
+    .ek-sidebar-blogs {
+        display: none;
+    }
+
 }
