--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -8,6 +8,9 @@
     flex-direction: column;
     gap: 30px;
 }
+.MA-sidebar-content{
+   display: block; 
+}
 .MA-side-category {
   display: flex;
   align-items: center;
@@ -56,6 +59,60 @@
   display: flex;
   align-items: center;
   gap: 4px;
+}
+.toggle-button {
+  display: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+
+
+@media (max-width: 768px) {
+  .MA-courses-sidebar {
+   /* width: 100px;
+    background-color: #ebe2e2;
+    padding: 10px;
+    position: relative;*/
+    
+    
+
+    position: relative;
+    padding: 5px;
+    width: 100px;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    transition: width 0.3s ease;
+
+  }
+  
+
+  .MA-sidebar-content{
+    display: none; 
+ }
+ 
+
+  .toggle-button {
+      display: block;
+  }
+
+  .MA-courses-sidebar.open {
+      width: 250px;
+      height: max-content;
+  }
+
+  .MA-courses-sidebar.open .MA-sidebar-content  {
+      display: block;
+  }
+
+  
 }
 
 
