--- a/src/pages/CourseSingle/CourseSingle.css
+++ b/src/pages/CourseSingle/CourseSingle.css
@@ -115,7 +115,7 @@
 
 .MA-CourseSingle-Detail {
   width: 917.78125px;
-  height: 874px;
+  /* height: 874px; */
   gap: 40px;
   margin: 0 auto;
   /* background-color: aqua; */
