--- a/src/components/BasicBreadcrumbs/BasicBreadcrumbs.css
+++ b/src/components/BasicBreadcrumbs/BasicBreadcrumbs.css
@@ -26,6 +26,10 @@
     width: 80%;
     margin: 0 auto;
   }
+  .MA-BasicBreadcrumbs {
+    height: 100px;
+    align-items: flex-start;
+  }
 }
 
 .type {
