--- a/src/pages/BlogSingle/BlogSingle.css
+++ b/src/pages/BlogSingle/BlogSingle.css
@@ -1,17 +1,44 @@
-.earnPress-h1 {
+.learnPress-h1 {
     font-family: Exo;
     font-size: 36px;
     font-weight: 600;
     line-height: 43.2px;
 }
+@media (max-width: 992px) {
+    .learnPress-h1 {
+        font-size: 18px;
+        line-height: 30px;
+    }
+}
 .ek-blogSingle {
     margin-left: 315px;
     margin-right: 315px;
+}
+@media (min-width: 320px) and (max-width: 1440px) {
+    .ek-blogSingle {
+        margin: 20px;
+    }
 }
 .ek-details {
     display: flex;
     align-items: center;
     gap: 24px;
+}
+@media (min-width: 320px) and (max-width: 500px) {
+    .ek-details {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    .ek-learn-card p {
+        width: 300px;
+        font-family: Jost;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
+        color: #555555;
+    }
+
 }
 .ek-details-content {
     display: flex;
@@ -23,14 +50,13 @@
     width: 16px;
 }
 
-.ek-learn-card img {
-    width: 990px;
-    height: 603px;
+.ek-learn-card .articlephoto {
+    width: 100%;
     border-radius: 20px;
     margin-top: 40px;
 }
+
 .ek-learn-card-content {
-    width: 990px;
     margin-top: 20px;
 }
 .ek-learn-card p {
@@ -40,14 +66,46 @@
     line-height: 27px;
     color: #555555;
 }
+@media (max-width: 992px) {
+    .ek-learn-card-content {
+        width: 50%;
+        margin-top: 20px auto;
+    }
+}
+@media (min-width: 992px) and (max-width: 1500px) {
+    .ek-learn-card p {
+        width: 600px;
+        font-family: Jost;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
+        color: #555555;
+    }
+}
 .ek-tags {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 20px;
     margin-top: 40px;
 }
+@media (min-width: 300px) and (max-width: 992px) {
+    .ek-tags {
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        gap: 5px;
+    }
+    .ek-tags-2 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 8px;
+    }
+}
 .ek-tags-2 {
     display: flex;
+    flex-wrap: wrap;
     gap: 8px;
 }
 .ek-tags-2 p {
@@ -66,25 +124,34 @@
 }
 .share {
     display: flex;
-    align-items: center;
     gap: 20px;
     height: 100px;
 }
-.social-media img {
+.ek-social-media-blogsingle img {
     width: 20px;
     height: 20px;
 }
 
-.social-media {
+.ek-social-media-blogsingle {
     height: 100px;
     display: flex;
     gap: 12px;
 }
+@media (min-width: 300px) and (max-width: 992px) {
+    .share {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 5px;
+    }
+}
 .pagination {
     display: flex;
+    /* flex-wrap: wrap; */
     gap: 30px;
     margin-bottom: 60px;
 }
+
 .pagination-item {
     display: flex;
     align-items: center;
@@ -110,6 +177,7 @@
     border: 1px solid #eaeaea;
     opacity: 0px;
 }
+
 .pagination-img {
     display: flex;
     justify-content: center;
@@ -145,4 +213,188 @@
 .ek-blogSingle {
     display: flex;
     gap: 30px;
+}
+@media (min-width: 300px) and (max-width: 768px) {
+    .pagination-item {
+        width: 100%;
+        height: max-content;
+        padding: 10px;
+    }
+    .pagination {
+        flex-direction: column;
+    }
+}
+@media (max-width: 800px) {
+    .ek-sidebar-single {
+        display: none !important;
+    }
+}
+@media (min-width: 320px) and (max-width: 500px) {
+    .ek-learn-card .articlephoto {
+        width: 300px;
+    } 
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+    .ek-learn-card .articlephoto {
+        width: 500px;
+    } 
+}
+@media (min-width: 768px) and (max-width: 1440px) {
+    .ek-learn-card .articlephoto {
+        width: 800px;
+    } 
+}
+
+.comments-section p {
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #555555;
+}
+
+.title-comment {
+    margin-bottom: 12px;
+    font-family: Exo;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+
+}
+.comment-box {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+@media (min-width: 300px) and (max-width: 600px) {
+    .comment-box {
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .special {
+        padding-left: 40px;
+    }
+}
+.comment-box-one {
+    display: flex;
+    gap: 20px;
+}
+.special {
+    padding-left: 80px;
+}
+
+.comment-box-one .girl {
+    width: 60px;
+    height: 60px;
+    border-radius: 43px;
+}
+
+.person-comment {
+    display: flex;
+    justify-content: space-between;
+}
+
+.person-comment h5 {
+    font-family: Exo;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19.2px;
+}
+
+.person-comment p {
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #555555;
+}
+
+.ek-comment {
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #555555;
+}
+
+.reply {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.reply img {
+    width: 14.74px;
+    height: 11.25px;
+}
+.reply span {
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #000;
+}
+
+.ek-pagination-comment {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+
+@media (min-width: 300px) and (max-width: 992px) {
+    .ek-pagination-comment {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+}
+.MA-TabCourseSingle-part2 {
+    margin-top: 60px;
+    margin-bottom: 90px;
+}
+.MA-course-single-form {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+@media (min-width: 300px) and (max-width: 992px) {
+    .MA-course-single-form {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+      }
+}
+  .MA-course-single-form .MA-course-single-form-input1 {
+    min-width: 250px;
+    margin-right: 15px;
+  }
+  .MA-course-single-form .MA-course-single-form-input2 {
+    min-width: 250px;
+    margin-left: 15px;
+  }
+  
+  .MA-course-single-form-comments {
+    min-width: 604px;
+    min-height: 110px;
+    border: 1px solid #d3d0d0;
+    border-radius: 8px;
+    gap:10px;
+    padding:10px 16px 10px 16px;
+} 
+
+@media (min-width: 300px) and (max-width: 992px) {
+    .MA-course-single-form-comments {
+        min-width: 300px;
+    } 
+    .MA-course-single-form .MA-course-single-form-input1 {
+        width: 100%;
+      }
+      .MA-course-single-form .MA-course-single-form-input2 {
+        width: 100%;
+      }
 }
