--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -69,6 +69,7 @@
     border-radius: 20px; 
     color: #fff;
     font-size: 16px;
+    font-family: "Exo 2", sans-serif;
     cursor: pointer;
     transition: background-color 0.3s;
 }
