--- a/src/pages/LogIn/LogIn.css
+++ b/src/pages/LogIn/LogIn.css
@@ -1,4 +1,5 @@
-/* src/styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 .login-page-container {
     width: 100vw;
@@ -24,7 +25,9 @@
 .login-form h2 {
     margin-bottom: 20px;
     color: #333;
-    text-align: left; 
+    text-align: left;
+    font-family: "Exo 2", sans-serif;
+    font-weight:bold ;
 }
 
 .input-group {
