--- a/src/components/CommentsSection/CommentsSection.css
+++ b/src/components/CommentsSection/CommentsSection.css
@@ -5,7 +5,7 @@
   max-width: 600px;
   margin: 0 auto;
   font-family: Arial, sans-serif;
-  background-color: #ffc107;
+  /* background-color: #ffc107; */
 }
 
 .rating-summary {
