--- a/src/components/Banner3/Banner3.css
+++ b/src/components/Banner3/Banner3.css
@@ -170,7 +170,7 @@
         margin-top: 45px ;
     }
     .SK-Banner3-Buttons .SK-Banner3-Button1 {
-        width: 125px;
+        width: 130px;
         margin: 0;
     }
     .SK-Banner3-Buttons .SK-Banner3-Button1 a {
@@ -201,6 +201,10 @@
         padding: 0;
         padding-top: 30px;
     }
+        #SK-LatestArticles-Button a {
+            font-size: 13px;
+            font-weight: 400;
+        }
     .SK-Banner3-content2 h4 {
         font-size: 14px;
         padding: 0;
@@ -221,7 +225,7 @@
     }
     .SK-Banner3-Buttons .SK-Banner3-Button1 a {
         font-weight: 400;
-        font-size: 13px;
+        font-size: 11px;
     }
     .SK-Banner3-Buttons .SK-Banner3-Button2 {
         width: 180px;
