--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -175,7 +175,12 @@ a {
 
 @media (max-width: 991px) {
     .footer {
-        padding: 60px 20px;
+        
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 60px;
+        padding-top: 400px;
+        background-color: #ffffff1f;
     }
 
     .footerContainer {
